[package]
name = "github-graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql-rocket = "6.0.11"
dotenv = "0.15.0"
reqwest = {version ="0.11" , features = ["json"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dependencies.rocket]
version = "0.5"
features = ["json"]

[dependencies.async-graphql]
version = "6.0"
